--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,7 +63,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-a {
+/* a {
   color: #1772d0;
   text-decoration: none;
 }
@@ -72,7 +72,7 @@ a:focus,
 a:hover {
   color: #f09228;
   text-decoration: none;
-}
+} */
 
 .topnav {
   background-color: white;
@@ -85,7 +85,7 @@ a:hover {
   color: black;
   float: center;
   text-align: center;
-  padding: 14px 16px;
+  padding: 16px;
   text-decoration: none;
   font-size: 20px;
 }
@@ -108,7 +108,7 @@ p,
 a {
   /* font-family: 'Lato', Verdana, Helvetica, sans-serif; */
   font-style: 'Monospace';
-  font-size: 17px
+  font-size: 17px;
 }
 
 strong {
@@ -126,8 +126,24 @@ heading {
 papertitle {
   /* font-family: 'Lato', Verdana, Helvetica, sans-serif; */
   font-style: 'Monospace';
-  font-size: 12px;
+  font-size: 18px;
   font-weight: 700
+}
+
+paperlink {
+  /* font-family: 'Lato', Verdana, Helvetica, sans-serif; */
+  font-style: 'Monospace';
+  font-size: 16px;
+  padding: 0px;
+  color: #1772d0;
+  float: none;
+  text-align: left;
+}
+
+paperyear {
+  font-style: 'Monospace';
+  font-size: 20px;
+  font-weight: 600
 }
 
 name {
