--- a/contact-form.css
+++ b/contact-form.css
@@ -9,7 +9,7 @@
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 0.25rem;
     max-width: 100%;
 }
