--- a/midistyle.css
+++ b/midistyle.css
@@ -2,7 +2,7 @@
 
 html, body {
     font-size:14pt;
-    font-family: Roboto, sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     line-height:1.2;
     box-sizing: border-box;
 }
